--- a/app/css/less/style.less
+++ b/app/css/less/style.less
@@ -1,16 +1,5 @@
-html, .page1, .page2, .page3 {
+body {
     height: 100%;
-}
-.page1 {
-    background-color: #fafafa;
-}
-
-.page2 {
-    background-color: black;
+    background-color: #1b1b1b;
     color: red;
-}
-
-.page3 {
-    background-color: green;
-    color: yellow;
 }
