--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,19 +1,7 @@
-html,
-.page1,
-.page2,
-.page3 {
+body {
   height: 100%;
-}
-.page1 {
-  background-color: #fafafa;
-}
-.page2 {
-  background-color: black;
+  background-color: #1b1b1b;
   color: red;
-}
-.page3 {
-  background-color: green;
-  color: yellow;
 }
 
 /*# sourceMappingURL=maps/style.css.map */
