--- a/app/css/less/contact.less
+++ b/app/css/less/contact.less
@@ -1,4 +1,4 @@
-#contactPage {
+.contactPage {
 	#contactLogo {
 		margin: 35px 0 0 35px;
 	}
@@ -6,8 +6,8 @@
 	.contactInfo {
 		width: 630px;
 		height: 346px;
-		margin: 75px auto;
-		// background-color: #eaeaea;
+		margin: auto;
+		position: absolute; left: 0; top: 35px; right: 0; bottom: 0;
 		background: url('../img/contactInfoBg.png');
 
 		.contactInfoList {
@@ -21,8 +21,8 @@
 	}
 
 	#contactArrow {
-		float: right;
-		margin: 0 54px 97px;
+		position: absolute; right: 54px; bottom: 95px;
 	}
+
 }
 
