--- a/app/css/less/style.less
+++ b/app/css/less/style.less
@@ -3,3 +3,11 @@ body {
     background-color: #1b1b1b;
     color: red;
 }
+
+.page {
+	min-height: 612px;
+}
+
+.logo {
+	position: absolute; bottom: 0; right: 0;
+}
