--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3,5 +3,13 @@ body {
   background-color: #1b1b1b;
   color: red;
 }
+.page {
+  min-height: 612px;
+}
+.logo {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
 
 /*# sourceMappingURL=maps/style.css.map */
