--- a/app/css/contact.css
+++ b/app/css/contact.css
@@ -1,22 +1,28 @@
-#contactPage #contactLogo {
+.contactPage #contactLogo {
   margin: 35px 0 0 35px;
 }
-#contactPage .contactInfo {
+.contactPage .contactInfo {
   width: 630px;
   height: 346px;
-  margin: 75px auto;
+  margin: auto;
+  position: absolute;
+  left: 0;
+  top: 35px;
+  right: 0;
+  bottom: 0;
   background: url('../img/contactInfoBg.png');
 }
-#contactPage .contactInfo .contactInfoList {
+.contactPage .contactInfo .contactInfoList {
   margin-left: 240px;
 }
-#contactPage .contactInfo .contactInfoList p {
+.contactPage .contactInfo .contactInfoList p {
   font-size: 30px;
   color: #908787;
 }
-#contactPage #contactArrow {
-  float: right;
-  margin: 0 54px 97px;
+.contactPage #contactArrow {
+  position: absolute;
+  right: 54px;
+  bottom: 95px;
 }
 
 /*# sourceMappingURL=maps/contact.css.map */
