--- a/app/css/less/works.less
+++ b/app/css/less/works.less
@@ -1,13 +1,14 @@
-#worksPage {
+.worksPage {
 	#worksLogo {
-		margin: 20px 0 0 35px;
+		position: absolute; left: 35px; top: 20px; right: 0; bottom: 0;
 	}
 
 	.worksMain {
 		width: 936px;
-		margin: 0 auto;
-
-		
+		height: 553px;
+		margin: auto;
+		position: absolute; left: 0; top: 95px; right: 0; bottom: 0;
+		overflow: hidden;
 	}
 
 	.worksItem {
