--- a/app/css/less/contact.less
+++ b/app/css/less/contact.less
@@ -1,6 +1,6 @@
 .contactPage {
 	#contactLogo {
-		margin: 35px 0 0 35px;
+		margin: 22px 0 0 35px;
 		position: absolute;
 	}
 
@@ -10,11 +10,25 @@
 		margin: auto;
 		position: absolute; left: 0; top: 35px; right: 0; bottom: 0;
 		background: url('../img/contactInfoBg.png');
+		
+		.contactPanel {
+			margin-top: 78px;
+			margin-left: 50px;
+			float: left;
+		}
 
 		.contactInfoList {
+			margin-top: 98px;
+
 			p {
 				font-size: 30px;
 				color: #908787;
+				margin: 23px;
+
+				span {
+					width: 75px;
+					display: inline-block;
+				}
 			}
 
 			margin-left: 240px;
