--- a/app/css/aboutus.css
+++ b/app/css/aboutus.css
@@ -26,7 +26,7 @@
 .aboutTop{
 	margin: 0 auto;
 	padding: 5.21% 0 0 74px;
-	width: 908px;
+	width: 936px;
 }
 .aboutHistory,.aboutHisInt{
 	width: 66.6%;
@@ -34,11 +34,14 @@
 	font-family: "Microsoft YaHei","微软雅黑";
 	color: #fbf5f5;
 }
+.aboutHistory{
+	margin-bottom: 10px;
+}
 .aboutstuPho{
 	height: 200px;
 	width: auto;
 	float: right;
-	margin-top: -70px;
+	margin: -70px 10px 0 0;
 }
 .aboutbottom{
 	margin: 0 auto 4.21% auto;
@@ -48,7 +51,7 @@
     left: 0;
     right: 0;
 	height: 53.38%;
-	width: 908px;
+	width: 936px;
 	overflow: hidden;
 }
 .aboutWra{
@@ -60,7 +63,7 @@
 .aboutHead{
 	float: left;
 	position: relative;
-	width: 450px;
+	width: 465px;
 	height: 30%;
 	margin-bottom: 20px;
 }
