--- a/app/css/less/contact.less
+++ b/app/css/less/contact.less
@@ -3,6 +3,10 @@
 		margin: 22px 0 0 35px;
 		position: absolute;
 	}
+	
+	.contactSideArrow {
+		height: 100%;
+	}
 
 	.contactInfo {
 		width: 630px;
