--- a/app/css/less/works.less
+++ b/app/css/less/works.less
@@ -2,6 +2,10 @@
 	#worksLogo {
 		position: absolute; left: 35px; top: 20px; right: 0; bottom: 0;
 	}
+	
+	.worksSideArrow {
+		height: 100%;
+	}
 
 	.worksMain {
 		width: 936px;
@@ -9,6 +13,37 @@
 		margin: auto;
 		position: absolute; left: 0; top: 95px; right: 0; bottom: 0;
 		overflow: hidden;
+	}
+
+	h3, p {
+		margin: 0;
+	}
+
+	.worksInfoLayer {
+		display: none;
+		background: #e6e6e6;
+		width: 100%;
+		height: 100%;
+
+		.worksCloseLayer {
+			float: right;
+
+		}
+
+		.worksLayerContent {
+			width: 271px;
+			height: 400px;
+			position: absolute; left: 330px; top: 64px;
+			border: 1px solid red;
+			color: black;
+			overflow: hidden;
+
+
+			img {
+				width: inherit;
+				height: 232px;
+			}
+		}
 	}
 
 	.worksItem {
@@ -22,8 +57,9 @@
 			height: 232px;
 		}
 
-		h3, p {
-			margin: 0;
+		:hover {
+			// background-color: white;
+			cursor: pointer;
 		}
 	}
 
@@ -31,12 +67,18 @@
 		margin-right: 0;
 	}
 
-	.worksMore p {
-		margin-top: 200px;
-		font-size: 18px;
-		font-weight: bold;
-		span {
-			vertical-align: middle;
-		}
+	.worksMore {
+		display: inherit;
+		font-size: 16px;
+		font-family: "Microsoft YaHei","微软雅黑";
+		color: #fbf5f5;
+		text-decoration: none;
+		margin: 480px 150px 0 0;
+
 	}
+
+	.worksMore:hover {
+		text-shadow:2px 2px 3px #fbf5f5;
+	} 
+
 }
