--- a/app/css/works.css
+++ b/app/css/works.css
@@ -29,22 +29,52 @@
   width: 100%;
   height: 100%;
 }
-.worksPage .worksInfoLayer .worksCloseLayer {
-  float: right;
-}
 .worksPage .worksInfoLayer .worksLayerContent {
-  width: 271px;
-  height: 400px;
-  position: absolute;
-  left: 330px;
-  top: 64px;
+  width: 936px;
+  height: 550px;
   color: black;
   overflow: hidden;
   background-color: white;
 }
-.worksPage .worksInfoLayer .worksLayerContent img {
+.worksPage .worksInfoLayer .worksLayerContent .flecheNavLeft,
+.worksPage .worksInfoLayer .worksLayerContent .flecheNavRight {
+  display: inline-block;
+  width: 75px;
+  height: 75px;
+  top: 230px;
+  position: absolute;
+  opacity: 0.3;
+}
+.worksPage .worksInfoLayer .worksLayerContent .flecheNavLeft:hover {
+  opacity: 1;
+}
+.worksPage .worksInfoLayer .worksLayerContent .flecheNavRight:hover {
+  opacity: 1;
+}
+.worksPage .worksInfoLayer .worksLayerContent .flecheNavLeft {
+  background: url('/img/flecheNav.png');
+  left: 10px;
+  -webkit-transform: scale(0.8) rotate(180deg);
+  -moz-transform: scale(0.8) rotate(180deg);
+  -o-transform: scale(0.8) rotate(180deg);
+  -ms-transform: scale(0.8) rotate(180deg);
+}
+.worksPage .worksInfoLayer .worksLayerContent .flecheNavRight {
+  background: url('/img/flecheNav.png');
+  right: 10px;
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+}
+.worksPage .worksInfoLayer .worksLayerContent .worksInfoLayerImg {
   width: inherit;
-  height: 232px;
+  height: 450px;
+}
+.worksPage .worksInfoLayer .worksLayerContent h3,
+.worksPage .worksInfoLayer .worksLayerContent p {
+  margin: 10px;
+  word-break: break-word;
 }
 .worksPage .worksItem {
   width: 230px;
@@ -59,22 +89,29 @@
 .worksPage .worksItem :hover {
   cursor: pointer;
 }
+.worksPage .worksItem p {
+  display: none;
+}
 .worksPage .worksItemRight {
   margin-right: 0;
 }
 .worksPage .worksNav {
-  margin: 480px 150px 0 0;
+  position: absolute;
+  right: 142px;
+  top: 480px;
 }
 .worksPage .worksMore,
 .worksPage .worksMoreLeft,
-.worksPage .worksMoreRight {
+.worksPage .worksMoreRight,
+.worksPage .worksLoading {
   font-size: 16px;
   font-family: "Microsoft YaHei", "微软雅黑";
   color: #fbf5f5;
   text-decoration: none;
 }
 .worksPage .worksMoreLeft,
-.worksPage .worksMoreRight {
+.worksPage .worksMoreRight,
+.worksPage .worksLoading {
   display: none;
 }
 .worksPage .worksMore:hover,
